--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,101 @@
-pandas==1.4.2
-numpy==1.22.3
-tqdm==4.64.0
+absl-py==1.2.0
+aio-pika==6.4.1
+aiormq==3.3.1
+APScheduler==3.6.3
+astunparse==1.6.3
+backports.zoneinfo==0.2.1
+cachetools==4.2.2
+certifi==2022.9.14
+cffi==1.15.1
+chardet==3.0.4
+click==7.1.2
+cryptography==38.0.1
+Cython==0.29.14
+DAWG-Python==0.7.2
+deeppavlov==0.17.5
+docopt==0.6.2
+fastapi==0.47.1
+filelock==3.0.12
+flatbuffers==2.0.7
+gast==0.4.0
 gensim==4.2.0
-nltk==3.7
-telegram==0.0.1
+google-auth==2.11.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.48.1
+h11==0.9.0
+h5py==2.10.0
+httptools==0.1.2
+huggingface-hub==0.9.1
+idna==2.8
+importlib-metadata==4.12.0
+joblib==1.1.0
+keras==2.10.0
+Keras-Preprocessing==1.1.2
+libclang==14.0.6
+Markdown==3.4.1
+MarkupSafe==2.1.1
+multidict==6.0.2
+nltk==3.4.5
+numpy==1.21.6
+oauthlib==3.2.1
+opt-einsum==3.3.0
+overrides==2.7.0
+packaging==21.3
+pamqp==2.3.0
+pandas==0.25.3
+prometheus-client==0.7.1
+protobuf==3.19.5
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pydantic==1.3
+pymorphy2==0.8
+pymorphy2-dicts==2.4.393442.3710985
+pymorphy2-dicts-ru==2.4.417127.4579844
+pyOpenSSL==22.0.0
+pyparsing==3.0.9
+pyTelegramBotAPI==3.6.7
+python-dateutil==2.8.2
+python-telegram-bot==13.14
+pytz==2019.1
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
+regex==2022.9.13
+requests==2.22.0
+requests-oauthlib==1.3.1
+rsa==4.9
+ruamel.yaml==0.15.100
+rusenttokenize==0.0.5
+sacremoses==0.0.35
+scikit-learn==0.21.2
+scipy==1.4.1
+six==1.16.0
 sklearn==0.0
-scikit-learn==1.0.2
-pymorphy2==0.9.1
+smart-open==6.2.0
+starlette==0.12.9
+telegram==0.0.1
+tensorboard==2.10.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.10.0
+tensorflow-estimator==2.10.0
+tensorflow-hub==0.12.0
+tensorflow-io-gcs-filesystem==0.27.0
+termcolor==2.0.1
+tokenizers==0.12.1
+torch==1.12.1
+tornado==6.1
+tqdm==4.62.0
+transformers==4.22.0
+typing_extensions==4.3.0
+tzdata==2022.2
+tzlocal==4.2
+urllib3==1.25.11
+uvicorn==0.11.7
+uvloop==0.14.0
+websockets==8.1
+Werkzeug==2.2.2
+wrapt==1.14.1
+yarl==1.8.1
+zipp==3.8.1
